fixing issue with buttons on Safari Mobile

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -45,7 +45,7 @@
 }
 
 button {
-	-webkit-appearance: none !important;
+
     -webkit-border-radius: 0 !important;
 }
 
